# bazel_clang_tidy

./: .bazelrc  .clang-tidy  BUILD  LICENSE  MODULE.bazel  README.md  WORKSPACE  defs.bzl
.github/workflows/: ci.yml
clang_tidy/: BUILD  apply_fixes.template.sh  clang_tidy.bzl  clang_tidy_test.bzl  run_clang_tidy.sh
example/: BUILD  app.cpp  lib.c  lib.cpp  lib.h  lib.hpp  lib_ignored.cpp  lib_ignored.hpp  person.proto
example/cc_test_example/: BUILD  cc_test_example.cpp  lib.cpp  lib.hpp
integration_test/: BUILD  abseil_test.cpp  gtest_example.cpp
tools/llvm/: BUILD
